--- a/css/products_styles.css
+++ b/css/products_styles.css
@@ -50,6 +50,7 @@
   color: #362706;
   letter-spacing: 0.1em;
   font-size: 1.2em;
+  white-space: nowrap;
 }
 
 .product-img-container{
